When displaying a popover, ensure the entire popover is visible and not hidden behind any overflow

--- a/tool/src/webapp/styles/gradebook-grades.css
+++ b/tool/src/webapp/styles/gradebook-grades.css
@@ -359,6 +359,7 @@
 /* Toolbar */
 #gradebookGrades {
   padding-top: 1.6em;
+  padding-bottom: 80px;
 }
 #gradebookGradesToolbar {
   background: #FAFAFA;
